--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -45,6 +45,7 @@ contextlib2 = 0.5.3
 selenium = 2.53.2
 six = 1.9.0
 pytz = 2016.4
+requests = 2.10.0
 
 backports.ssl-match-hostname = 3.4.0.2
 Products.AutoUserMakerPASPlugin = 1.1
