update compute version 1.12.0-rc1

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -17,7 +17,7 @@ mr.developer = 1.26
 zodbupdate = 0.5
 
 # BCCVL Projects
-org.bccvl.compute = 1.11.4
+org.bccvl.compute = 1.12.0-rc1
 org.bccvl.site = 1.11.3
 org.bccvl.testsetup = 1.11.0
 org.bccvl.theme = 1.11.1
