Update versions for release.

--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -20,7 +20,7 @@ z3c.recipe.staticlxml = 0.10
 zptlint = 0.2.4
 
 # Required by:
-# org.bccvl.site==1.11.3
+# org.bccvl.site==1.12.0-rc1
 Products.AdvancedQuery = 3.0.3
 
 # Required by:
@@ -28,7 +28,7 @@ Products.AdvancedQuery = 3.0.3
 Products.DateRecurringIndex = 2.1
 
 # Required by:
-# org.bccvl.site==1.11.3
+# org.bccvl.site==1.12.0-rc1
 Products.ShibbolethPermissions = 0.8b2
 
 # Required by:
@@ -40,27 +40,27 @@ SPARQLWrapper = 1.6.4
 collective.elephantvocabulary = 0.2.5
 
 # Required by:
-# org.bccvl.site==1.11.3
+# org.bccvl.site==1.12.0-rc1
 collective.googleanalytics = 1.4.4
 
 # Required by:
-# org.bccvl.site==1.11.3
+# org.bccvl.site==1.12.0-rc1
 collective.indexing = 1.8
 
 # Required by:
-# org.bccvl.site==1.11.3
+# org.bccvl.site==1.12.0-rc1
 collective.jsonmigrator = 0.2
 
 # Required by:
-# org.bccvl.site==1.11.3
+# org.bccvl.site==1.12.0-rc1
 collective.onlogin = 1.0
 
 # Required by:
-# org.bccvl.site==1.11.3
+# org.bccvl.site==1.12.0-rc1
 collective.setuphelpers = 0.6.5
 
 # Required by:
-# org.bccvl.site==1.11.3
+# org.bccvl.site==1.12.0-rc1
 five.pt = 2.2.3
 
 # Required by:
@@ -104,132 +104,7 @@ profilehooks = 1.8.0
 pyparsing = 2.0.3
 
 # Required by:
-# org.bccvl.site==1.11.3
-requests-oauthlib = 0.5.0
-
-# Required by:
-# plone.formwidget.captcha==1.0.2
-skimpyGimpy = 1.4
-
-# Required by:
-# ipython==4.0.0
-traitlets = 4.0.0
-
-# Required by:
-# plone.app.themingplugins==1.0
-z3c.jbot = 0.7.2
-
-# Required by:
-# z3c.recipe.staticlxml==0.10
-zc.recipe.cmmi = 1.3.6
-
-# Added by buildout at 2016-07-04 22:11:59.567219
-Chameleon = 2.22
-Products.Clouseau = 1.0
-Products.DocFinderTab = 1.0.5
-Products.PrintingMailHost = 0.8
-collective.profiler = 0.3
-collective.recipe.backup = 2.20
-collective.recipe.plonesite = 1.9.2
-gdata = 2.0.18
-icalendar = 3.9.0
-ipdb = 0.8.1
-plone.app.debugtoolbar = 1.0
-plone.event = 1.1
-python-xmp-toolkit = 2.0.1
-robotframework-ride = 1.4.1
-simplegeneric = 0.8.1
-sourcecodegen = 0.6.14
-z3c.pt = 2.2.3
-z3c.recipe.staticlxml = 0.10
-zptlint = 0.2.4
-
-# Required by:
-# org.bccvl.site==1.11.3
-Products.AdvancedQuery = 3.0.3
-
-# Required by:
-# plone.app.event==1.1.5
-Products.DateRecurringIndex = 2.1
-
-# Required by:
-# org.bccvl.site==1.11.3
-Products.ShibbolethPermissions = 0.8b2
-
-# Required by:
-# rdflib==4.1.2
-SPARQLWrapper = 1.6.4
-
-# Required by:
-# plone.app.event==1.1.5
-collective.elephantvocabulary = 0.2.5
-
-# Required by:
-# org.bccvl.site==1.11.3
-collective.googleanalytics = 1.4.4
-
-# Required by:
-# org.bccvl.site==1.11.3
-collective.indexing = 1.8
-
-# Required by:
-# org.bccvl.site==1.11.3
-collective.jsonmigrator = 0.2
-
-# Required by:
-# org.bccvl.site==1.11.3
-collective.onlogin = 1.0
-
-# Required by:
-# org.bccvl.site==1.11.3
-collective.setuphelpers = 0.6.5
-
-# Required by:
-# org.bccvl.site==1.11.3
-five.pt = 2.2.3
-
-# Required by:
-# rdflib==4.1.2
-html5lib = 0.999999
-
-# Required by:
-# traitlets==4.0.0
-ipython-genutils = 0.1.0
-
-# Required by:
-# rdflib==4.1.2
-isodate = 0.5.4
-
-# Required by:
-# plone.formwidget.recaptcha==2.0a2
-norecaptcha = 0.3.0
-
-# Required by:
-# pickleshare==0.5
-path.py = 7.6
-
-# Required by:
-# ipython==4.0.0
-pexpect = 3.3
-
-# Required by:
-# ipython==4.0.0
-pickleshare = 0.5
-
-# Required by:
-# plone.app.contenttypes==1.1
-plone.formwidget.querystring = 1.1.5
-
-# Required by:
-# collective.profiler==0.3
-profilehooks = 1.8.0
-
-# Required by:
-# rdflib==4.1.2
-pyparsing = 2.0.3
-
-# Required by:
-# org.bccvl.site==1.11.3
+# org.bccvl.site==1.12.0-rc1
 requests-oauthlib = 0.5.0
 
 # Required by:
