--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -17,12 +17,12 @@ mr.developer = 1.26
 zodbupdate = 0.5
 
 # BCCVL Projects
-org.bccvl.compute = 1.12.0-rc1
-org.bccvl.site = 1.11.3
-org.bccvl.testsetup = 1.11.0
-org.bccvl.theme = 1.11.1
-org.bccvl.tasks = 1.11.1
-org.bccvl.movelib = 1.2.0
+org.bccvl.compute = 1.12.0-rc2
+org.bccvl.site = 1.12.0-rc1
+org.bccvl.testsetup = 1.12.0-rc1
+org.bccvl.theme = 1.12.0-rc1
+org.bccvl.tasks = 1.11.2-rc1
+org.bccvl.movelib = 1.13.0-rc1
 
 celery = 3.1.17
 kombu = 3.0.24
