--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -12,6 +12,7 @@ ipdb = 0.8.1
 plone.app.debugtoolbar = 1.0
 plone.event = 1.1
 python-xmp-toolkit = 2.0.1
+raven = 5.7.2
 robotframework-ride = 1.4.1
 simplegeneric = 0.8.1
 sourcecodegen = 0.6.14
