update picked versions

--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -1,27 +1,49 @@
 [versions]
-Chameleon = 2.22
+Chameleon = 2.16
 Products.Clouseau = 1.0
 Products.DocFinderTab = 1.0.5
-Products.PrintingMailHost = 0.8
+Products.PrintingMailHost = 0.7
 collective.profiler = 0.3
-collective.recipe.backup = 2.20
-collective.recipe.plonesite = 1.9.2
+collective.recipe.backup = 2.18
+collective.recipe.plonesite = 1.8.2
+debtcollector = 1.5.0
+funcsigs = 1.0.2
+futures = 3.0.5
 gdata = 2.0.18
-icalendar = 3.9.0
-ipdb = 0.8.1
-plone.app.debugtoolbar = 1.0
+icalendar = 3.7
+ipdb = 0.8
+iso8601 = 0.1.11
+keystoneauth1 = 2.8.0
+monotonic = 1.1
+msgpack-python = 0.4.7
+netaddr = 0.7.18
+netifaces = 0.10.4
+oslo.config = 3.11.0
+oslo.i18n = 3.7.0
+oslo.serialization = 2.9.0
+oslo.utils = 3.13.0
+path.py = 8.1.2
+pbr = 1.10.0
+plone.app.debugtoolbar = 1.0a3
 plone.event = 1.1
+positional = 1.1.0
+ptyprocess = 0.5
+pycrypto = 2.6.1
+python-keystoneclient = 3.1.0
+python-swiftclient = 3.0.0
 python-xmp-toolkit = 2.0.1
 raven = 5.7.2
-robotframework-ride = 1.4.1
+robotframework-ride = 1.1
+scp = 0.10.2
 simplegeneric = 0.8.1
 sourcecodegen = 0.6.14
+stevedore = 1.15.0
 z3c.pt = 2.2.3
 z3c.recipe.staticlxml = 0.10
 zptlint = 0.2.4
 
 # Required by:
-# org.bccvl.site==1.12.0-rc1
+# org.bccvl.site==1.12.0.dev0
 Products.AdvancedQuery = 3.0.3
 
 # Required by:
@@ -29,83 +51,87 @@ Products.AdvancedQuery = 3.0.3
 Products.DateRecurringIndex = 2.1
 
 # Required by:
-# org.bccvl.site==1.12.0-rc1
+# org.bccvl.site==1.12.0.dev0
 Products.ShibbolethPermissions = 0.8b2
 
 # Required by:
 # rdflib==4.1.2
-SPARQLWrapper = 1.6.4
+SPARQLWrapper = 1.6.0
 
 # Required by:
 # plone.app.event==1.1.5
-collective.elephantvocabulary = 0.2.5
+collective.elephantvocabulary = 0.2.4
 
 # Required by:
-# org.bccvl.site==1.12.0-rc1
-collective.googleanalytics = 1.4.4
+# org.bccvl.site==1.12.0.dev0
+collective.googleanalytics = 1.4.3
 
 # Required by:
-# org.bccvl.site==1.12.0-rc1
+# org.bccvl.site==1.12.0.dev0
 collective.indexing = 1.8
 
 # Required by:
-# org.bccvl.site==1.12.0-rc1
+# org.bccvl.site==1.12.0.dev0
 collective.jsonmigrator = 0.2
 
 # Required by:
-# org.bccvl.site==1.12.0-rc1
+# org.bccvl.site==1.12.0.dev0
 collective.onlogin = 1.0
 
 # Required by:
-# org.bccvl.site==1.12.0-rc1
-collective.setuphelpers = 0.6.5
+# org.bccvl.site==1.12.0.dev0
+collective.setuphelpers = 0.6.3
 
 # Required by:
-# org.bccvl.site==1.12.0-rc1
-five.pt = 2.2.3
+# paramiko==1.14.0
+ecdsa = 0.11
+
+# Required by:
+# org.bccvl.site==1.12.0.dev0
+five.pt = 2.2.2
 
 # Required by:
 # rdflib==4.1.2
-html5lib = 0.999999
+html5lib = 0.95
 
 # Required by:
-# traitlets==4.0.0
+# traitlets==4.1.0
 ipython-genutils = 0.1.0
 
 # Required by:
 # rdflib==4.1.2
-isodate = 0.5.4
+isodate = 0.5.0
 
 # Required by:
 # plone.formwidget.recaptcha==2.0a2
 norecaptcha = 0.3.0
 
 # Required by:
-# pickleshare==0.5
-path.py = 7.6
+# scp==0.10.2
+paramiko = 1.14.0
 
 # Required by:
 # ipython==4.0.0
-pexpect = 3.3
+pexpect = 4.0.1
 
 # Required by:
 # ipython==4.0.0
-pickleshare = 0.5
+pickleshare = 0.6
 
 # Required by:
 # plone.app.contenttypes==1.1
-plone.formwidget.querystring = 1.1.5
+plone.formwidget.querystring = 1.1.2
 
 # Required by:
 # collective.profiler==0.3
-profilehooks = 1.8.0
+profilehooks = 1.7.1
 
 # Required by:
 # rdflib==4.1.2
-pyparsing = 2.0.3
+pyparsing = 2.0.2
 
 # Required by:
-# org.bccvl.site==1.12.0-rc1
+# org.bccvl.site==1.12.0.dev0
 requests-oauthlib = 0.5.0
 
 # Required by:
@@ -114,7 +140,11 @@ skimpyGimpy = 1.4
 
 # Required by:
 # ipython==4.0.0
-traitlets = 4.0.0
+traitlets = 4.1.0
+
+# Required by:
+# positional==1.1.0
+wrapt = 1.10.8
 
 # Required by:
 # plone.app.themingplugins==1.0
