due to setup.cfg in repo the tag for quintagroup.transmogrifier and actual version produced by setuptools do not match

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -8,7 +8,7 @@ find-links +=
   https://github.com/BCCVL/org.bccvl.tasks/archive/${versions:org.bccvl.tasks}.tar.gz#egg=org.bccvl.tasks-${versions:org.bccvl.tasks}
   https://github.com/BCCVL/org.bccvl.movelib/archive/${versions:org.bccvl.movelib}.tar.gz#egg=org.bccvl.movelib-${versions:org.bccvl.movelib}
   https://github.com/gu-eresearch/gu.transmogrifier/archive/${versions:gu.transmogrifier}.tar.gz#egg=gu.transmogrifier-${versions:gu.transmogrifier}
-  https://github.com/collective/quintagroup.transmogrifier/archive/${versions:quintagroup.transmogrifier}.tar.gz#egg=quintagroup.transmogrifier-${versions:quintagroup.transmogrifier}
+  https://github.com/collective/quintagroup.transmogrifier/archive/0.5-FHNW1.tar.gz#egg=quintagroup.transmogrifier-${versions:quintagroup.transmogrifier}
 
 [versions]
 zc.buildout = 2.5.0
@@ -55,7 +55,7 @@ plone.api = 1.4.11
 
 # Bugfix overrides
 # fetch quintagroup.transmogrifier develop version so that we can use collective.transmogrifier > 1.4
-quintagroup.transmogrifier = 0.5-FHNW1
+quintagroup.transmogrifier = 0.5-FHNW1dev-r0
 collective.transmogrifier = 1.5.1
 plone.app.transmogrifier = 1.4
 transmogrify.dexterity = 1.6.1
