--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -21,7 +21,7 @@ org.bccvl.compute = 1.12.0-rc2
 org.bccvl.site = 1.12.0-rc1
 org.bccvl.testsetup = 1.12.0-rc1
 org.bccvl.theme = 1.12.0-rc1
-org.bccvl.tasks = 1.11.2-rc2
+org.bccvl.tasks = 1.11.2rc3
 org.bccvl.movelib = 1.3.0-rc2
 
 celery = 3.1.17
