To include gdal library.

--- a/buildout.d/base.cfg
+++ b/buildout.d/base.cfg
@@ -35,7 +35,7 @@ eggs =
     Products.CMFPlone
     Products.ZSQLMethods # currently required by Products.CMFCore
     roman # temporary bypass for https://bugs.launchpad.net/zope2/+bug/539181    Plone
-    org.bccvl.site [deprecated] # our policy package... should pull in any other dependencies
+    org.bccvl.site [deprecated,test] # our policy package... should pull in any other dependencies
     celery # need the celery start scripts
 zcml = org.bccvl.theme
 environment-vars =
