--- a/buildout.d/picked-versions.cfg
+++ b/buildout.d/picked-versions.cfg
@@ -1,106 +1,114 @@
 [versions]
-Chameleon = 2.16
+Chameleon = 2.24
 Products.Clouseau = 1.0
 Products.DocFinderTab = 1.0.5
-Products.PrintingMailHost = 0.7
+Products.PrintingMailHost = 0.8
+cffi = 1.7.0
 collective.profiler = 0.3
-collective.recipe.backup = 2.18
-collective.recipe.plonesite = 1.8.2
-debtcollector = 1.5.0
+collective.recipe.backup = 3.0.0
+collective.recipe.plonesite = 1.9.5
+cryptography = 1.4
+debtcollector = 1.6.0
 funcsigs = 1.0.2
 futures = 3.0.5
 gdata = 2.0.18
-icalendar = 3.7
-ipdb = 0.8
+icalendar = 3.10
+idna = 2.1
+ipdb = 0.10.1
 iso8601 = 0.1.11
-keystoneauth1 = 2.8.0
+keepalive = 0.5
+keystoneauth1 = 2.9.0
 monotonic = 1.1
 msgpack-python = 0.4.7
 netaddr = 0.7.18
 netifaces = 0.10.4
-oslo.config = 3.11.0
-oslo.i18n = 3.7.0
-oslo.serialization = 2.9.0
-oslo.utils = 3.13.0
-path.py = 8.1.2
+oslo.config = 3.13.0
+oslo.i18n = 3.8.0
+oslo.serialization = 2.11.0
+oslo.utils = 3.16.0
 pbr = 1.10.0
-plone.app.debugtoolbar = 1.0a3
-plone.event = 1.1
-positional = 1.1.0
-ptyprocess = 0.5
-pycrypto = 2.6.1
-python-keystoneclient = 3.1.0
+plone.app.debugtoolbar = 1.1.0
+plone.event = 1.3
+positional = 1.1.1
+ptyprocess = 0.5.1
+pyasn1 = 0.1.9
+python-keystoneclient = 3.2.0
 python-swiftclient = 3.0.0
 python-xmp-toolkit = 2.0.1
-raven = 5.7.2
-robotframework-ride = 1.1
+raven = 5.23.0
+rfc3986 = 0.3.1
+robotframework-ride = 1.5.2.1
 scp = 0.10.2
 simplegeneric = 0.8.1
 sourcecodegen = 0.6.14
-stevedore = 1.15.0
+stevedore = 1.16.0
 z3c.pt = 2.2.3
 z3c.recipe.staticlxml = 0.10
 zptlint = 0.2.4
 
 # Required by:
-# org.bccvl.site==1.12.0.dev0
-Products.AdvancedQuery = 3.0.3
+# org.bccvl.site==1.13.0.dev0
+Products.AdvancedQuery = 3.0.4
 
 # Required by:
 # plone.app.event==1.1.5
 Products.DateRecurringIndex = 2.1
 
 # Required by:
-# org.bccvl.site==1.12.0.dev0
+# org.bccvl.site==1.13.0.dev0
 Products.ShibbolethPermissions = 0.8b2
 
 # Required by:
 # rdflib==4.1.2
-SPARQLWrapper = 1.6.0
+SPARQLWrapper = 1.7.6
 
 # Required by:
 # plone.app.event==1.1.5
-collective.elephantvocabulary = 0.2.4
+collective.elephantvocabulary = 0.2.5
 
 # Required by:
-# org.bccvl.site==1.12.0.dev0
-collective.googleanalytics = 1.4.3
+# org.bccvl.site==1.13.0.dev0
+collective.googleanalytics = 1.4.4
 
 # Required by:
-# org.bccvl.site==1.12.0.dev0
+# org.bccvl.site==1.13.0.dev0
 collective.indexing = 1.8
 
 # Required by:
-# org.bccvl.site==1.12.0.dev0
-collective.jsonmigrator = 0.2
+# org.bccvl.site==1.13.0.dev0
+collective.jsonmigrator = 0.4
 
 # Required by:
-# org.bccvl.site==1.12.0.dev0
+# org.bccvl.site==1.13.0.dev0
 collective.onlogin = 1.0
 
 # Required by:
-# org.bccvl.site==1.12.0.dev0
-collective.setuphelpers = 0.6.3
+# org.bccvl.site==1.13.0.dev0
+collective.setuphelpers = 0.6.5
 
 # Required by:
-# paramiko==1.14.0
-ecdsa = 0.11
+# cryptography==1.4
+enum34 = 1.1.6
 
 # Required by:
-# org.bccvl.site==1.12.0.dev0
-five.pt = 2.2.2
+# org.bccvl.site==1.13.0.dev0
+five.pt = 2.2.4
 
 # Required by:
 # rdflib==4.1.2
-html5lib = 0.95
+html5lib = 0.999999999
 
 # Required by:
-# traitlets==4.1.0
+# cryptography==1.4
+ipaddress = 1.0.16
+
+# Required by:
+# traitlets==4.2.2
 ipython-genutils = 0.1.0
 
 # Required by:
 # rdflib==4.1.2
-isodate = 0.5.0
+isodate = 0.5.4
 
 # Required by:
 # plone.formwidget.recaptcha==2.0a2
@@ -108,31 +116,39 @@ norecaptcha = 0.3.0
 
 # Required by:
 # scp==0.10.2
-paramiko = 1.14.0
+paramiko = 2.0.2
+
+# Required by:
+# pickleshare==0.7.3
+pathlib2 = 2.1.0
 
 # Required by:
 # ipython==4.0.0
-pexpect = 4.0.1
+pexpect = 4.2.0
 
 # Required by:
 # ipython==4.0.0
-pickleshare = 0.6
+pickleshare = 0.7.3
 
 # Required by:
 # plone.app.contenttypes==1.1
-plone.formwidget.querystring = 1.1.2
+plone.formwidget.querystring = 1.1.6
 
 # Required by:
 # collective.profiler==0.3
-profilehooks = 1.7.1
+profilehooks = 1.8.1
+
+# Required by:
+# cffi==1.7.0
+pycparser = 2.14
 
 # Required by:
 # rdflib==4.1.2
-pyparsing = 2.0.2
+pyparsing = 2.1.5
 
 # Required by:
-# org.bccvl.site==1.12.0.dev0
-requests-oauthlib = 0.5.0
+# org.bccvl.site==1.13.0.dev0
+requests-oauthlib = 0.6.2
 
 # Required by:
 # plone.formwidget.captcha==1.0.2
@@ -140,10 +156,14 @@ skimpyGimpy = 1.4
 
 # Required by:
 # ipython==4.0.0
-traitlets = 4.1.0
+traitlets = 4.2.2
 
 # Required by:
-# positional==1.1.0
+# html5lib==0.999999999
+webencodings = 0.5
+
+# Required by:
+# positional==1.1.1
 wrapt = 1.10.8
 
 # Required by:
@@ -153,3 +173,4 @@ z3c.jbot = 0.7.2
 # Required by:
 # z3c.recipe.staticlxml==0.10
 zc.recipe.cmmi = 1.3.6
+
