--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -18,11 +18,11 @@ zodbupdate = 0.5
 
 # BCCVL Projects
 org.bccvl.compute = 1.12.0
-org.bccvl.site = 1.12.0
-org.bccvl.testsetup = 1.12.0
-org.bccvl.theme = 1.12.0
-org.bccvl.tasks = 1.12.0
-org.bccvl.movelib = 1.3.0
+org.bccvl.site = 1.13.1rc1
+org.bccvl.testsetup = 1.13.1rc1
+org.bccvl.theme = 1.13.1rc1
+org.bccvl.tasks = 1.13.1rc1
+org.bccvl.movelib = 1.3.1rc1
 
 celery = 3.1.17
 kombu = 3.0.24
