--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -17,12 +17,12 @@ mr.developer = 1.26
 zodbupdate = 0.5
 
 # BCCVL Projects
-org.bccvl.compute = 1.13.0rc1
-org.bccvl.site = 1.13.1rc2
-org.bccvl.testsetup = 1.13.1rc1
-org.bccvl.theme = 1.13.1rc1
-org.bccvl.tasks = 1.13.1rc1
-org.bccvl.movelib = 1.3.1rc1
+org.bccvl.compute = 1.13.1
+org.bccvl.site = 1.13.1
+org.bccvl.testsetup = 1.13.1
+org.bccvl.theme = 1.13.1
+org.bccvl.tasks = 1.13.1
+org.bccvl.movelib = 1.3.1
 
 celery = 3.1.17
 kombu = 3.0.24
