--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -24,12 +24,12 @@ zc.recipe.egg = 2.0.3
 ZConfig = 3.1.0
 
 # BCCVL Projects
-org.bccvl.compute = 1.11.0-rc5
-org.bccvl.site = 1.11.0-rc5
-org.bccvl.testsetup = 1.11.0-rc1
-org.bccvl.theme = 1.11.0-rc2
-org.bccvl.tasks = 1.11.0-rc3
-org.bccvl.movelib = 1.2.0-rc1
+org.bccvl.compute = 1.13.1
+org.bccvl.site = 1.13.2
+org.bccvl.testsetup = 1.13.1
+org.bccvl.theme = 1.13.3
+org.bccvl.tasks = 1.13.2
+org.bccvl.movelib = 1.3.2
 
 # other packages maintained by us
 gu.transmogrifier = 0.5.0
@@ -220,3 +220,5 @@ z3c.jbot = 0.7.2
 raven = 5.10.2
 contextlib2 = 0.5.1
 selenium = 2.53.2
+six = 1.9.0
+pytz = 2016.4
