allow whitespace in path names (jenkins test coverage runner)

--- a/files/test.cfg
+++ b/files/test.cfg
@@ -87,7 +87,7 @@ input = inline:
     #!/bin/sh
     # Remove old results
     echo "Erase old coverage results."
-    ${:coverage} erase
+    "${:coverage}" erase
     # Collect test coverage results for all packages
     echo "Run test coverage analysis for all packages."
     DIRECTORIES="${jenkins:jenkins-test-directories}"
@@ -97,13 +97,13 @@ input = inline:
     # all packages. The data will be collected in a ".coverage" output file
     # in the buildout directory.
     echo "Run coverage tests"
-    ${:coverage} run -p --source="$SOURCES" ${:jenkins-test} --all
+    "${:coverage}" run -p --source="$SOURCES" "${:jenkins-test}" --all
     echo "Create test coverage report."
     # Combine all package analysis
-    ${:coverage} combine
+    "${:coverage}" combine
     # Generates a "coverage.xml" file that Jenkins can read and process from the
     # ".coverage" file that the coverage report created.
-    ${:coverage} xml -i -o ${buildout:parts-directory}/jenkins-test/coverage.xml
+    "${:coverage}" xml -i -o "${buildout:parts-directory}/jenkins-test/coverage.xml"
     echo "Test coverage report finished."
 output = ${buildout:bin-directory}/jenkins-test-coverage
 mode = 755
