update build pipeline no support feature testing and automatic deployment

--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -4,22 +4,13 @@ extends = http://dist.plone.org/release/4.3.9/versions.cfg
 versions = versions
 
 find-links +=
-  https://github.com/BCCVL/org.bccvl.site/archive/develop.tar.gz#egg=org.bccvl.site
-  https://github.com/BCCVL/org.bccvl.theme/archive/develop.tar.gz#egg=org.bccvl.theme
-  https://github.com/BCCVL/org.bccvl.compute/archive/develop.tar.gz#egg=org.bccvl.compute
-  https://github.com/BCCVL/org.bccvl.testsetup/archive/develop.tar.gz#egg=org.bccvl.testsetup
-  https://github.com/BCCVL/org.bccvl.tasks/archive/develop.tar.gz#egg=org.bccvl.tasks
-  https://github.com/BCCVL/org.bccvl.movelib/archive/develop.tar.gz#egg=org.bccvl.movelib
+  https://github.com/BCCVL/org.bccvl.site/archive/${versions:org.bccvl.site}.tar.gz#egg=org.bccvl.site-${versions:org.bccvl.site}
+  https://github.com/BCCVL/org.bccvl.theme/archive/${versions:org.bccvl.theme}.tar.gz#egg=org.bccvl.theme-${versions:org.bccvl.theme}
+  https://github.com/BCCVL/org.bccvl.compute/archive/${versions:org.bccvl.compute}.tar.gz#egg=org.bccvl.compute-${versions:org.bccvl.compute}
+  https://github.com/BCCVL/org.bccvl.testsetup/archive/${versions:org.bccvl.testsetup}.tar.gz#egg=org.bccvl.testsetup-${versions:org.bccvl.testsetup}
+  https://github.com/BCCVL/org.bccvl.tasks/archive/${versions:org.bccvl.tasks}.tar.gz#egg=org.bccvl.tasks-${versions:org.bccvl.tasks}
+  https://github.com/BCCVL/org.bccvl.movelib/archive/${versions:org.bccvl.movelib}.tar.gz#egg=org.bccvl.movelib-${versions:org.bccvl.movelib}
   https://github.com/gu-eresearch/gu.transmogrifier/archive/${versions:gu.transmogrifier}.tar.gz#egg=gu.transmogrifier-${versions:gu.transmogrifier}
-
-#find-links +=
-#  https://github.com/BCCVL/org.bccvl.site/archive/${versions:org.bccvl.site}.tar.gz#egg=org.bccvl.site-${versions:org.bccvl.site}
-#  https://github.com/BCCVL/org.bccvl.theme/archive/${versions:org.bccvl.theme}.tar.gz#egg=org.bccvl.theme-${versions:org.bccvl.theme}
-#  https://github.com/BCCVL/org.bccvl.compute/archive/${versions:org.bccvl.compute}.tar.gz#egg=org.bccvl.compute-${versions:org.bccvl.compute}
-#  https://github.com/BCCVL/org.bccvl.testsetup/archive/${versions:org.bccvl.testsetup}.tar.gz#egg=org.bccvl.testsetup-${versions:org.bccvl.testsetup}
-#  https://github.com/BCCVL/org.bccvl.tasks/archive/${versions:org.bccvl.tasks}.tar.gz#egg=org.bccvl.tasks-${versions:org.bccvl.tasks}
-#  https://github.com/BCCVL/org.bccvl.movelib/archive/${versions:org.bccvl.movelib}.tar.gz#egg=org.bccvl.movelib-${versions:org.bccvl.movelib}
-#  https://github.com/gu-eresearch/gu.transmogrifier/archive/${versions:gu.transmogrifier}.tar.gz#egg=gu.transmogrifier-${versions:gu.transmogrifier}
 
 
 [versions]
@@ -37,19 +28,19 @@ plone.app.users = 2.0.4
 # want env var substition in zope.conf
 ZConfig = 3.1.0
 # keep selenium at latest version to avoid problems with latest browsers
-selenium = 2.53.0
+selenium = 2.53.6
 
 # pin gdal; must be in sync with system gdal library
 GDAL = 1.11.2
 
 
 # BCCVL Projects
-#org.bccvl.compute = develop
-#org.bccvl.site = develop
-#org.bccvl.testsetup = develop
-#org.bccvl.theme = develop
-#org.bccvl.tasks = develop
-#org.bccvl.movelib = develop
+org.bccvl.compute = 1.13.0
+org.bccvl.site = 1.13.0
+org.bccvl.testsetup = 1.13.0
+org.bccvl.theme = 1.13.0
+org.bccvl.tasks = 1.13.0
+org.bccvl.movelib = 1.13.0
 
 # other packages maintained by us
 gu.transmogrifier = 0.5.0
