update sub package references

--- a/files/sources.cfg
+++ b/files/sources.cfg
@@ -23,12 +23,12 @@ bccvl_push = git@github.com:BCCVL
 
 
 [branch]
-org.bccvl.site = feature/aekos_import
-org.bccvl.theme = feature/aekos_import
+org.bccvl.site = develop
+org.bccvl.theme = develop
 org.bccvl.compute = develop
 org.bccvl.testsetup = develop
-org.bccvl.tasks = feature/aekos_import
-org.bccvl.movelib = feature/aekos_import
+org.bccvl.tasks = develop
+org.bccvl.movelib = develop
 
 
 [sources]
