fix develop.cfg and pin ipython

--- a/files/develop.cfg
+++ b/files/develop.cfg
@@ -4,10 +4,13 @@ extends =
     sources.cfg
     buildout.cfg
 
-[instance-settings]
+[instance]
 eggs +=
     ipdb
     plone.app.debugtoolbar
     Products.PrintingMailHost
     plone.reload
     zptlint
+
+[versions]
+ipython = 4.1.1
