--- a/files/sources.cfg
+++ b/files/sources.cfg
@@ -23,8 +23,8 @@ bccvl_push = git@github.com:BCCVL
 
 
 [branch]
-org.bccvl.site = develop
-org.bccvl.theme = develop
+org.bccvl.site = traitsv2
+org.bccvl.theme = traitsv2
 org.bccvl.compute = develop
 org.bccvl.testsetup = develop
 org.bccvl.tasks = develop
