no more mr.developer for docker builds

--- a/files/sources.cfg
+++ b/files/sources.cfg
@@ -1,40 +1,9 @@
 [buildout]
 
-extensions += mr.developer
-
-always-checkout = true
-
-auto-checkout +=
-    org.bccvl.site
-    org.bccvl.theme
-    org.bccvl.testsetup
-    org.bccvl.compute
-    org.bccvl.tasks
-    org.bccvl.movelib
-
-
-[remotes]
-# (Repository locations)
-########################
-
-# BCCVL
-bccvl = git://github.com/BCCVL
-bccvl_push = git@github.com:BCCVL
-
-
-[branch]
-org.bccvl.site = traitsv2
-org.bccvl.theme = traitsv2
-org.bccvl.compute = develop
-org.bccvl.testsetup = develop
-org.bccvl.tasks = develop
-org.bccvl.movelib = develop
-
-
-[sources]
-org.bccvl.site = git ${remotes:bccvl}/org.bccvl.site.git pushurl=${remotes:bccvl_push}/org.bccvl.site.git branch=${branch:org.bccvl.site}
-org.bccvl.theme = git ${remotes:bccvl}/org.bccvl.theme.git pushurl=${remotes:bccvl_push}/org.bccvl.theme.git branch=${branch:org.bccvl.theme}
-org.bccvl.testsetup = git ${remotes:bccvl}/org.bccvl.testsetup.git pushurl=${remotes:bccvl_push}/org.bccvl.testsetup.git branch=${branch:org.bccvl.testsetup}
-org.bccvl.compute = git ${remotes:bccvl}/org.bccvl.compute.git pushurl=${remotes:bccvl_push}/org.bccvl.compute.git branch=${branch:org.bccvl.compute}
-org.bccvl.tasks = git ${remotes:bccvl}/org.bccvl.tasks.git pushurl=${remotes:bccvl_push}/org.bccvl.tasks.git branch=${branch:org.bccvl.tasks}
-org.bccvl.movelib = git ${remotes:bccvl}/org.bccvl.movelib.git pushurl=${remotes:bccvl_push}/org.bccvl.movelib.git branch=${branch:org.bccvl.movelib}
+develop =
+    src/org.bccvl.site
+    src/org.bccvl.theme
+    src/org.bccvl.testsetup
+    src/org.bccvl.compute
+    src/org.bccvl.tasks
+    src/org.bccvl.movelib
