--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -25,6 +25,7 @@ babel = 2.3.4
 # some plone stuff we want to be updated
 mailinglogger = 3.8.0
 plone.app.users = 2.0.4
+decorator = 4.0.10
 # want env var substition in zope.conf
 ZConfig = 3.1.0
 # keep selenium at latest version to avoid problems with latest browsers
