--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -17,12 +17,12 @@ mr.developer = 1.26
 zodbupdate = 0.5
 
 # BCCVL Projects
-org.bccvl.compute = 1.14.0rc3
-org.bccvl.site = 1.14.0rc3
-org.bccvl.testsetup = 1.14.0rc1
-org.bccvl.theme = 1.14.0rc3
-org.bccvl.tasks = 1.14.0rc2
-org.bccvl.movelib = 1.4.0rc1
+org.bccvl.compute = 1.14.0
+org.bccvl.site = 1.14.0
+org.bccvl.testsetup = 1.14.0
+org.bccvl.theme = 1.14.0
+org.bccvl.tasks = 1.14.0
+org.bccvl.movelib = 1.4.0
 
 celery = 3.1.17
 kombu = 3.0.24
