re-organise buildout

--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -1,60 +1,136 @@
 [buildout]
-extends = http://dist.plone.org/release/4.3.9/versions.cfg
-
-versions = versions
-
-find-links +=
-  https://github.com/gu-eresearch/gu.transmogrifier/archive/${versions:gu.transmogrifier}.tar.gz#egg=gu.transmogrifier-${versions:gu.transmogrifier}
-#  https://github.com/BCCVL/org.bccvl.site/archive/${versions:org.bccvl.site}.tar.gz#egg=org.bccvl.site-${versions:org.bccvl.site}
-#  https://github.com/BCCVL/org.bccvl.theme/archive/${versions:org.bccvl.theme}.tar.gz#egg=org.bccvl.theme-${versions:org.bccvl.theme}
-#  https://github.com/BCCVL/org.bccvl.compute/archive/${versions:org.bccvl.compute}.tar.gz#egg=org.bccvl.compute-${versions:org.bccvl.compute}
-#  https://github.com/BCCVL/org.bccvl.testsetup/archive/${versions:org.bccvl.testsetup}.tar.gz#egg=org.bccvl.testsetup-${versions:org.bccvl.testsetup}
-#  https://github.com/BCCVL/org.bccvl.tasks/archive/${versions:org.bccvl.tasks}.tar.gz#egg=org.bccvl.tasks-${versions:org.bccvl.tasks}
-#  https://github.com/BCCVL/org.bccvl.movelib/archive/${versions:org.bccvl.movelib}.tar.gz#egg=org.bccvl.movelib-${versions:org.bccvl.movelib}
-
-
+extends = http://dist.plone.org/release/4.3.11/versions.cfg
 
 [versions]
+# unpin packages where we can safely use latest versions
+pytz =
+selenium =
+
 ## override packages pinned in plone / zope buildout
-# update build env and pin setuptools to compatible version
-zc.buildout = 2.5.2
-setuptools = 20.1.1
-zc.recipe.egg = 2.0.3
+# unpin zc.buildout and setupttols to use system wide installed packages
+zc.buildout =
+setuptools =
+Pillow =
+
 # openstack client needs newer versions
-pytz = 2016.6.1
-babel = 2.3.4
+Babel = 2.3.4
+
 # some plone stuff we want to be updated
 mailinglogger = 3.8.0
 plone.app.users = 2.0.4
 decorator = 4.0.10
 # want env var substition in zope.conf
 ZConfig = 3.1.0
-# keep selenium at latest version to avoid problems with latest browsers
-selenium = 2.53.6
-
-# pin gdal; must be in sync with system gdal library
-GDAL = 1.11.2
 
 
 # BCCVL Projects
-#org.bccvl.compute = 1.13.0
-#org.bccvl.site = 1.13.0
-#org.bccvl.testsetup = 1.13.0
-#org.bccvl.theme = 1.13.0
-#org.bccvl.tasks = 1.13.0
-#org.bccvl.movelib = 1.13.0
+org.bccvl.compute = 1.13.0
+org.bccvl.site = 1.13.0
+org.bccvl.testsetup = 1.13.0
+org.bccvl.theme = 1.13.0
+org.bccvl.tasks = 1.13.0
+org.bccvl.movelib = 1.13.0
 
 # other packages maintained by us
-gu.transmogrifier = 0.5.0
+gu.transmogrifier = 0.5.1
 
 # Version pins needed
-RelStorage = 1.6.0
+RelStorage = 1.6.3
+celery = 3.1.25
+eea.facetednavigation = 9.10
 
 
-# Some Pins I used to use
-#Products.PrintingMailHost = 0.8
-#collective.emailconfirmationregistration = 1.2.0b5
-#plone.formwidget.captcha = 1.0.2
-#plone.formwidget.recaptcha = 2.0a2
-#collective.z3cform.norobots = 1.4.2.2
-#unweb.recipe.uwsgi = 0.4
+# Version pins for unpinned dependencies
+Chameleon = 3.0
+Products.PrintingMailHost = 1.0
+amqp = 1.4.9
+anyjson = 0.3.3
+billiard = 3.3.0.23
+cffi = 1.9.1
+cryptography = 1.7.2
+debtcollector = 1.11.0
+dropbox = 7.1.1
+eea.faceted.vocabularies = 6.0
+eea.jquery = 9.4
+funcsigs = 1.0.2
+futures = 3.0.5
+gdata = 2.0.18
+gocept.recipe.env = 1.0
+google-api-python-client = 1.6.2
+httplib2 = 0.10.3
+icalendar = 3.11.3
+idna = 2.2
+iso8601 = 0.1.11
+keystoneauth1 = 2.18.0
+kombu = 3.0.37
+matplotlib = 2.0.0
+monotonic = 1.2
+msgpack-python = 0.4.8
+netaddr = 0.7.19
+netifaces = 0.10.5
+norecaptcha = 0.3.0
+oauth2client = 4.0.0
+oauthlib = 2.0.1
+oslo.config = 3.22.0
+oslo.i18n = 3.12.0
+oslo.serialization = 2.16.0
+oslo.utils = 3.22.0
+pbr = 1.10.0
+plone.event = 1.3.3
+plone.rest = 1.0a7
+positional = 1.1.1
+psycopg2 = 2.6.2
+pyasn1 = 0.2.2
+pyasn1-modules = 0.0.8
+python-keystoneclient = 3.10.0
+python-swiftclient = 3.3.0
+python-xmp-toolkit = 2.0.1
+raven = 6.0.0
+requests = 2.13.0
+rfc3986 = 0.4.1
+rsa = 3.4.2
+scp = 0.10.2
+sourcecodegen = 0.6.14
+stevedore = 1.20.0
+syseggrecipe = 1.5.1
+typing = 3.5.3.0
+uritemplate = 3.0.0
+z3c.pt = 3.0
+Products.AdvancedQuery = 3.0.4
+Products.AutoUserMakerPASPlugin = 2.1.1
+Products.DateRecurringIndex = 2.1
+Products.ShibbolethPermissions = 0.8b2
+PyJWT = 1.4.2
+collective.elephantvocabulary = 0.2.5
+collective.emailconfirmationregistration = 1.2.0b5
+collective.googleanalytics = 1.5.0
+collective.indexing = 1.8
+collective.jsonmigrator = 0.4
+collective.onlogin = 1.0
+collective.transmogrifier = 1.5.1
+collective.z3cform.norobots = 1.4.4
+contextlib2 = 0.5.4
+cssselect = 1.0.1
+enum34 = 1.1.6
+five.pt = 2.2.4
+ipaddress = 1.0.18
+isodate = 0.5.4
+paramiko = 2.1.1
+perfmetrics = 2.0
+plone.api = 1.6
+plone.app.themingplugins = 1.0
+plone.app.transmogrifier = 1.4
+plone.formwidget.captcha = 1.0.3
+plone.formwidget.querystring = 1.1.8
+plone.formwidget.recaptcha = 2.0a3
+plone.restapi = 1.0a8
+pycparser = 2.17
+rdflib = 4.2.2
+requests-oauthlib = 0.8.0
+skimpyGimpy = 1.4
+subprocess32 = 3.2.7
+transmogrify.dexterity = 1.6.3
+urllib3 = 1.20
+wrapt = 1.10.8
+z3c.jbot = 0.7.2
+
