--- a/files/sources.cfg
+++ b/files/sources.cfg
@@ -1,9 +1,27 @@
-[buildout]
 
-develop =
-    src/org.bccvl.site
-    src/org.bccvl.theme
-    src/org.bccvl.testsetup
-    src/org.bccvl.compute
-    src/org.bccvl.tasks
-    src/org.bccvl.movelib
+[remotes]
+# Plone
+plone = git://github.com/plone
+plone_push = git@github.com:plone
+
+# Collective
+collective = git://github.com/collective
+collective_push = git@github.com:collective
+
+# Zope
+zope = git://github.com/zopefoundation
+zope_push = git@github.com:zopefoundation
+
+# BCCVL
+bccvl = git://github.com/BCCVL
+bccvl_push = git@github.com:BCCVL
+
+[sources]
+gu.transmogrifier   = git ${remotes:bccvl}/gu.transmogrifier.git   pushurl=${remotes:bccvl_push}/gu.transmogrifier.git   branch=master
+org.bccvl.site      = git ${remotes:bccvl}/org.bccvl.site.git      pushurl=${remotes:bccvl_push}/org.bccvl.site.git      branch=develop
+org.bccvl.theme     = git ${remotes:bccvl}/org.bccvl.theme.git     pushurl=${remotes:bccvl_push}/org.bccvl.theme.git     branch=develop
+org.bccvl.testsetup = git ${remotes:bccvl}/org.bccvl.testsetup.git pushurl=${remotes:bccvl_push}/org.bccvl.testsetup.git branch=develop
+org.bccvl.compute   = git ${remotes:bccvl}/org.bccvl.compute.git   pushurl=${remotes:bccvl_push}/org.bccvl.compute.git   branch=develop
+org.bccvl.tasks     = git ${remotes:bccvl}/org.bccvl.tasks.git     pushurl=${remotes:bccvl_push}/org.bccvl.tasks.git     branch=develop
+org.bccvl.movelib   = git ${remotes:bccvl}/org.bccvl.movelib.git   pushurl=${remotes:bccvl_push}/org.bccvl.movelib.git   branch=develop
+
