--- a/files/test.cfg
+++ b/files/test.cfg
@@ -1,3 +1,13 @@
+[buildout]
+
+parts +=
+    test
+    test-coverage
+    test-coverage-report
+    jenkins-test
+    jenkins-test-coverage
+
+
 [test]
 recipe = zc.recipe.testrunner
 eggs =
