update jenkins build build all from master

--- a/files/bccvl.cfg
+++ b/files/bccvl.cfg
@@ -14,14 +14,14 @@ extends =
     versions.cfg
 
 allow-hosts =
-    172.17.0.2:3141
-#    *.python.org
-#    *.plone.org
-#    *.zope.org
-#    launchpad.net
-#    github.com
-#    robotframework.googlecode.com
-#    *.griffith.edu.au*
+    172.17.*
+    *.python.org
+    *.plone.org
+    *.zope.org
+    launchpad.net
+    github.com
+    robotframework.googlecode.com
+    *.griffith.edu.au*
 
 find-links += http://dist.plone.org/thirdparty/
 
