configurable admin password

--- a/files/bccvl.cfg
+++ b/files/bccvl.cfg
@@ -38,6 +38,7 @@ versions = versions
 # set defaults in case environment variables are not set
 BCCVL_VAR = ${buildout:directory}/var
 BCCVL_USER =
+ADMIN_PASS = admin
 
 [environment]
 <= env-defaults
@@ -49,7 +50,7 @@ recipe = gocept.recipe.env
 ##############################################################################
 [instance]
 recipe = plone.recipe.zope2instance
-user = admin:admin
+user = admin:${environment:ADMIN_PASS}
 http-address = 0.0.0.0:8080
 effective-user = ${environment:BCCVL_USER}
 event-log-custom =
