use develop branch update development buildout config

--- a/files/sources.cfg
+++ b/files/sources.cfg
@@ -17,10 +17,10 @@ bccvl = git://github.com/BCCVL
 bccvl_push = git@github.com:BCCVL
 
 [sources]
-gu.transmogrifier   = git ${remotes:bccvl}/gu.transmogrifier.git   pushurl=${remotes:bccvl_push}/gu.transmogrifier.git   branch=master
-org.bccvl.site      = git ${remotes:bccvl}/org.bccvl.site.git      pushurl=${remotes:bccvl_push}/org.bccvl.site.git      branch=master
-org.bccvl.theme     = git ${remotes:bccvl}/org.bccvl.theme.git     pushurl=${remotes:bccvl_push}/org.bccvl.theme.git     branch=master
-org.bccvl.testsetup = git ${remotes:bccvl}/org.bccvl.testsetup.git pushurl=${remotes:bccvl_push}/org.bccvl.testsetup.git branch=master
-org.bccvl.compute   = git ${remotes:bccvl}/org.bccvl.compute.git   pushurl=${remotes:bccvl_push}/org.bccvl.compute.git   branch=master
-org.bccvl.tasks     = git ${remotes:bccvl}/org.bccvl.tasks.git     pushurl=${remotes:bccvl_push}/org.bccvl.tasks.git     branch=master
-org.bccvl.movelib   = git ${remotes:bccvl}/org.bccvl.movelib.git   pushurl=${remotes:bccvl_push}/org.bccvl.movelib.git   branch=master
+gu.transmogrifier   = git ${remotes:bccvl}/gu.transmogrifier.git   pushurl=${remotes:bccvl_push}/gu.transmogrifier.git   branch=develop
+org.bccvl.site      = git ${remotes:bccvl}/org.bccvl.site.git      pushurl=${remotes:bccvl_push}/org.bccvl.site.git      branch=develop
+org.bccvl.theme     = git ${remotes:bccvl}/org.bccvl.theme.git     pushurl=${remotes:bccvl_push}/org.bccvl.theme.git     branch=develop
+org.bccvl.testsetup = git ${remotes:bccvl}/org.bccvl.testsetup.git pushurl=${remotes:bccvl_push}/org.bccvl.testsetup.git branch=develop
+org.bccvl.compute   = git ${remotes:bccvl}/org.bccvl.compute.git   pushurl=${remotes:bccvl_push}/org.bccvl.compute.git   branch=develop
+org.bccvl.tasks     = git ${remotes:bccvl}/org.bccvl.tasks.git     pushurl=${remotes:bccvl_push}/org.bccvl.tasks.git     branch=develop
+org.bccvl.movelib   = git ${remotes:bccvl}/org.bccvl.movelib.git   pushurl=${remotes:bccvl_push}/org.bccvl.movelib.git   branch=develop
