--- a/files/bccvl.cfg
+++ b/files/bccvl.cfg
@@ -25,7 +25,7 @@ allow-hosts =
 
 find-links += http://dist.plone.org/thirdparty/
 
-extensions =
+extensions +=
     mr.developer
 
 versions = versions
