use pinned versions on master build

--- a/files/checkouts.cfg
+++ b/files/checkouts.cfg
@@ -6,10 +6,10 @@ always-checkout = force
 
 auto-checkout =
 #    gu.transmogrifier
-    org.bccvl.movelib
-    org.bccvl.site
-    org.bccvl.theme
-    org.bccvl.testsetup
-    org.bccvl.compute
-    org.bccvl.tasks
+#    org.bccvl.movelib
+#    org.bccvl.site
+#    org.bccvl.theme
+#    org.bccvl.testsetup
+#    org.bccvl.compute
+#    org.bccvl.tasks
 
