--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -24,12 +24,12 @@ ZConfig = 3.1.0
 
 
 # BCCVL Projects
-org.bccvl.compute = 1.13.0
-org.bccvl.site = 1.13.0
-org.bccvl.testsetup = 1.13.0
-org.bccvl.theme = 1.13.0
-org.bccvl.tasks = 1.13.0
-org.bccvl.movelib = 1.13.0
+org.bccvl.compute = 1.15.0rc2
+org.bccvl.site = 1.15.0rc1
+org.bccvl.testsetup = 1.15.0rc1
+org.bccvl.theme = 1.15.0rc2
+org.bccvl.tasks = 1.15.0
+org.bccvl.movelib = 1.5.0
 
 # other packages maintained by us
 gu.transmogrifier = 0.5.1
