--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -25,10 +25,10 @@ ZConfig = 3.1.0
 
 # BCCVL Projects
 org.bccvl.compute = 1.15.0rc2
-org.bccvl.site = 1.15.0rc1
+org.bccvl.site = 1.15.0rc2
 org.bccvl.testsetup = 1.15.0rc1
-org.bccvl.theme = 1.15.0rc2
-org.bccvl.tasks = 1.15.0
+org.bccvl.theme = 1.15.0rc3
+org.bccvl.tasks = 1.15.1rc2
 org.bccvl.movelib = 1.5.0
 
 # other packages maintained by us
