--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -25,9 +25,9 @@ ZConfig = 3.1.0
 
 # BCCVL Projects
 org.bccvl.compute = 1.15.0rc2
-org.bccvl.site = 1.15.0rc3
+org.bccvl.site = 1.15.1.dev4+build9.gitge156bd9
 org.bccvl.testsetup = 1.15.0rc2
-org.bccvl.theme = 1.15.0rc4
+org.bccvl.theme = 1.15.1.dev5+build7.gitga7808c1
 org.bccvl.tasks = 1.15.1rc2
 org.bccvl.movelib = 1.5.0
 
