--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -24,12 +24,12 @@ ZConfig = 3.1.0
 
 
 # BCCVL Projects
-org.bccvl.compute = 1.15.0rc2
-org.bccvl.site = 1.15.1.dev10+build11.gitg9815c68
-org.bccvl.testsetup = 1.15.0rc2
-org.bccvl.theme = 1.15.1.dev11+build8.gitg547cb15
-org.bccvl.tasks = 1.15.2.dev3+build18.gitg4381ef4
-org.bccvl.movelib = 1.5.0
+org.bccvl.compute = 1.15.1.dev12+build10.gitgef06b2d
+org.bccvl.site = 1.15.1.dev39+build18.gitg2b19210
+org.bccvl.testsetup = 1.15.1.dev8+build7.gitg0d0a0ff
+org.bccvl.theme = 1.15.1.dev29+build19.gitg25e70ef
+org.bccvl.tasks = 1.15.3.dev5+build24.gitg81f04c8
+org.bccvl.movelib = 1.5.1.dev1+build20.gitgaf41e37
 
 # other packages maintained by us
 gu.transmogrifier = 0.5.1
