update qa release

--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -24,10 +24,10 @@ ZConfig = 3.1.0
 
 
 # BCCVL Projects
-org.bccvl.compute = 1.15.1.dev12+build10.gitgef06b2d
-org.bccvl.site = 1.15.1.dev39+build18.gitg2b19210
-org.bccvl.testsetup = 1.15.1.dev8+build7.gitg0d0a0ff
-org.bccvl.theme = 1.15.1.dev29+build19.gitg25e70ef
+org.bccvl.compute = 1.15.1.dev19+build11.gitga9f9277
+org.bccvl.site = 1.15.1.dev51+build20.gitgcce2a02
+org.bccvl.testsetup = 1.15.1.dev9+build8.gitg5c5eaee
+org.bccvl.theme = 1.15.1.dev41+build20.gitg8cec3d5
 org.bccvl.tasks = 1.15.3.dev5+build24.gitg81f04c8
 org.bccvl.movelib = 1.5.1.dev1+build20.gitgaf41e37
 
