--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -24,12 +24,12 @@ ZConfig = 3.1.0
 
 
 # BCCVL Projects
-org.bccvl.compute = 1.15.1.dev19+build11.gitga9f9277
-org.bccvl.site = 1.15.1.dev51+build20.gitgcce2a02
-org.bccvl.testsetup = 1.15.1.dev9+build8.gitg5c5eaee
-org.bccvl.theme = 1.15.1.dev43+build21.gitg2a1e4c2
-org.bccvl.tasks = 1.15.3.dev5+build24.gitg81f04c8
-org.bccvl.movelib = 1.5.1.dev1+build20.gitgaf41e37
+org.bccvl.compute = 1.16.0
+org.bccvl.site = 1.16.0
+org.bccvl.testsetup = 1.16.0
+org.bccvl.theme = 1.16.0
+org.bccvl.tasks = 1.16.0
+org.bccvl.movelib = 1.6.0
 
 # other packages maintained by us
 gu.transmogrifier = 0.5.1
