try with disablessl

--- a/files/bccvl.cfg
+++ b/files/bccvl.cfg
@@ -26,6 +26,7 @@ allow-hosts =
 find-links += http://dist.plone.org/thirdparty/
 
 extensions +=
+    buildout.disablessl
     mr.developer
 
 versions = versions
