--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -4,6 +4,7 @@ extends = http://dist.plone.org/release/4.3.11/versions.cfg
 [versions]
 # unpin packages where we can safely use latest versions
 pytz =
+six =
 selenium = 3.3.0
 
 ## override packages pinned in plone / zope buildout
