update release versions

--- a/buildout.d/versions.cfg
+++ b/buildout.d/versions.cfg
@@ -4,18 +4,18 @@ find-links +=
   https://github.com/collective/quintagroup.transmogrifier/archive/0.5-FHNW1.tar.gz#egg=quintagroup.transmogrifier-${versions:quintagroup.transmogrifier}
 
 [versions]
-zc.buildout = 2.9.3
-setuptools = 36.0.1
+zc.buildout = 2.9.5
+setuptools = 36.0.1.post20171110
 mr.developer = 1.26
 zodbupdate = 0.5
 
 # BCCVL Projects
-org.bccvl.compute = 1.16.0
-org.bccvl.site = 1.16.0
+org.bccvl.compute = 1.17.0
+org.bccvl.site = 1.17.0
 org.bccvl.testsetup = 1.16.0
-org.bccvl.theme = 1.16.0
-org.bccvl.tasks = 1.16.0
-org.bccvl.movelib = 1.6.0
+org.bccvl.theme = 1.17.0
+org.bccvl.tasks = 1.17.0
+org.bccvl.movelib = 1.7.0
 
 celery = 3.1.17
 kombu = 3.0.24
