use latest setuptools ... works again after fixing recursive import in 'org' namespace packages

--- a/files/requirements-build.txt
+++ b/files/requirements-build.txt
@@ -1,6 +1,4 @@
 zc.buildout==2.9.5
-# NOTE: patched setuptools version with proper ssl sni support, and
-#       no import problems with zope2
-setuptools==36.0.1.post20171110
+setuptools
 guscmversion
 scikit-image
