--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -5,7 +5,7 @@ extends = http://dist.plone.org/release/4.3.14/versions.cfg
 # unpin packages where we can safely use latest versions
 pytz =
 six =
-selenium = 3.3.0
+selenium =
 
 ## override packages pinned in plone / zope buildout
 # unpin zc.buildout and setupttols to use system wide installed packages
