--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -112,6 +112,7 @@ collective.elephantvocabulary = 0.2.5
 collective.emailconfirmationregistration = 1.2.0b5
 collective.googleanalytics = 1.5.0
 collective.indexing = 2.0
+collective.solr = 5.0.3
 collective.jsonmigrator = 0.4
 collective.onlogin = 1.0
 collective.transmogrifier = 1.5.1
