--- a/files/bccvl.cfg
+++ b/files/bccvl.cfg
@@ -67,6 +67,7 @@ access-log-custom =
 eggs =
   Plone
   Pillow
+  collective.solr
   org.bccvl.site
   org.bccvl.tasks[exports,metadata]
   org.bccvl.movelib[scp,swift,http]
