unpin our packages so that we can pull in latest (pre)releases

--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -24,12 +24,12 @@ decorator = 4.1.2
 ZConfig = 3.1.0
 
 # BCCVL Projects
-org.bccvl.compute = 1.17.0
-org.bccvl.site = 1.17.0
-org.bccvl.testsetup = 1.16.0
-org.bccvl.theme = 1.17.0
-org.bccvl.tasks = 1.17.0
-org.bccvl.movelib = 1.7.0
+org.bccvl.compute =
+org.bccvl.site =
+org.bccvl.testsetup =
+org.bccvl.theme =
+org.bccvl.tasks =
+org.bccvl.movelib =
 
 # other packages maintained by us
 gu.transmogrifier = 0.5.1
