unpin bccvl packages (let buildout auto pick)

--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -24,12 +24,12 @@ decorator = 4.1.2
 ZConfig = 3.1.0
 
 # BCCVL Projects
-org.bccvl.compute = 1.17.1.dev59+g421ee3d
-org.bccvl.site = 1.17.1.dev33+g3fb50f6
-org.bccvl.testsetup = 1.16.1.dev3+g5ef1a85
-org.bccvl.theme = 1.17.1.dev49+g81d69f8
-org.bccvl.tasks = 1.17.1.dev18+gd4a14d8
-org.bccvl.movelib = 1.7.1.dev5+g37628a0
+org.bccvl.compute =
+org.bccvl.site =
+org.bccvl.testsetup =
+org.bccvl.theme =
+org.bccvl.tasks =
+org.bccvl.movelib =
 
 # other packages maintained by us
 gu.transmogrifier = 0.5.1
