pin pip version.

--- a/files/requirements-build.txt
+++ b/files/requirements-build.txt
@@ -2,5 +2,5 @@ zc.buildout==2.9.5
 # setuptools >= 38.2.0 support installing wheels,
 #                      but zc.buildout 2.9.5 doesn't handle that behaviour
 setuptools==38.1.0
-guscmversion
+pip=9.0.3
 scikit-image
