--- a/files/requirements-build.txt
+++ b/files/requirements-build.txt
@@ -3,5 +3,5 @@ zc.buildout==2.9.5
 #                      but zc.buildout 2.9.5 doesn't handle that behaviour
 setuptools==38.1.0
 pip==9.0.3
-matplotlib=2.0.0
+matplotlib==2.0.0
 scikit-image
