Added new PyPI hosts

--- a/files/bccvl.cfg
+++ b/files/bccvl.cfg
@@ -22,6 +22,8 @@ allow-hosts =
     github.com
     robotframework.googlecode.com
     *.griffith.edu.au*
+    pypi.org
+    files.pythonhosted.org
 
 find-links += http://dist.plone.org/thirdparty/
 
