--- a/files/requirements-build.txt
+++ b/files/requirements-build.txt
@@ -2,6 +2,6 @@ zc.buildout==2.12.2
 # setuptools >= 38.2.0 support installing wheels,
 #                      but zc.buildout 2.9.5 doesn't handle that behaviour
 setuptools
-pip==9.0.3
+pip
 matplotlib==2.0.0
 scikit-image
