update zope2instance recipe (support recent setuptools)

--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -12,6 +12,7 @@ selenium =
 zc.buildout =
 setuptools =
 Pillow =
+plone.recipe.zope2instance = 4.4.1
 
 # openstack client needs newer version
 Babel = 2.3.4
