Pin networkx package for buildout.

--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -75,6 +75,7 @@ idna = 2.6
 iso8601 = 0.1.11
 keystoneauth1 = 2.18.0
 matplotlib = 2.0.0
+networkx = 2.2
 monotonic = 1.2
 msgpack-python = 0.4.8
 netaddr = 0.7.19
