Pin scikit-image and scipy version to fix build.

--- a/files/versions.cfg
+++ b/files/versions.cfg
@@ -135,6 +135,8 @@ plone.formwidget.recaptcha = 2.0a3
 pycparser = 2.17
 rdflib = 4.2.2
 requests-oauthlib = 0.8.0
+scikit-image = 0.14.2
+scipy = 1.2.1
 skimpyGimpy = 1.4
 subprocess32 = 3.2.7
 transmogrify.dexterity = 1.6.3
